upd:映射到真实dom工作完成

--- a/demo.html
+++ b/demo.html
@@ -10,8 +10,9 @@
   }
 </style>
 <body>
-	<div id="app"></div>
-	<script type="text/javascript" src="./vue2.js"></script>
+	<div id="app">
+	</div>
+	<script type="text/javascript" src="./vue1.js"></script>
     <script type="text/javascript"></script>
 </body>
 </html>
