upd:发布订阅者说明文档

--- a/demo.html
+++ b/demo.html
@@ -5,11 +5,9 @@
 	<title></title>
 </head>
 <style type="text/css">
-  .inner {
-  	font-size: 30px;
-  }
 </style>
 <body>
+	<input type="file" name=""/>
 	<div id="app">
 	</div>
 	<script type="text/javascript" src="./vue3.js"></script>
