--- a/demo.html
+++ b/demo.html
@@ -7,11 +7,11 @@
 <style type="text/css">
 </style>
 <body>
-	<input type="file" name=""/>
 	<div id="app">
 	</div>
-	<script type="text/javascript" src="./vue3.js"></script>
-    <script type="text/javascript"></script>
+	<script type="text/javascript" src="./vue4.js"></script>
+    <script type="text/javascript">
+    </script>
 </body>
 </html>
 
